@@ -993,6 +993,27 @@ test execute-10.2 {Bug 2802881} -setup {
     interp delete slave
 } -returnCodes error -match glob -result *
 
+test execute-10.3 {Bug 3072640} -setup {
+    proc generate {n} {
+	for {set i 0} {$i < $n} {incr i} {
+	    yield $i
+	}
+    }
+    proc t {args} { 
+	incr ::foo 
+    }
+    trace add execution ::generate enterstep ::t
+} -body {
+    coroutine coro generate 5
+    trace remove execution ::generate enterstep ::t
+    set ::foo
+} -cleanup {
+    unset ::foo
+    rename generate {}
+    rename t {}
+    rename coro {}
+} -result 4
+
 # cleanup
 if {[info commands testobj] != {}} {
    testobj freeallvars
